--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   http: ^1.2.1
   http_parser: ^4.0.2
   path: ^1.9.0
+  webview_flutter: ^4.8.0
 
 dependency_overrides:
   web: ^0.4.0
