--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   permission_handler: ^8.0.0
   firebase_core: ^2.27.0
   cloud_firestore: ^4.15.8
-  intl: ^0.18.1
+  intl: ^0.19.0
   downloads_path_provider_28: ^0.1.2
   flutter_slidable: ^3.1.0
   firebase_messaging: ^14.7.19
@@ -58,6 +58,7 @@ dependencies:
   http_parser: ^4.0.2
   path: ^1.9.0
   webview_flutter: ^4.8.0
+  in_app_purchase: ^3.2.0
 
 dependency_overrides:
   web: ^0.4.0
